# stupid_compilation_scripts

./: Cargo.toml  c  d
src/: main.rs
test/: .codehash  ex  x.cpp
