[package]
name = "ravi"
version = "0.1.0"
authors = ["Aleksandre Khokhiashvili <skhokhi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
clap = "2.33.3"
sha2 = "0.9.5"
thiserror = "1.0.26"
